--- a/測試/style.css
+++ b/測試/style.css
@@ -936,6 +936,11 @@ hr {
     color: #3C4935;
 }
 
+#signup h3 {
+    font-family: 'Unna', serif;
+    /* border: solid 5px pink; */
+}
+
 #signup h4 {
     color: #797474;
     font-size: 14px;
@@ -949,6 +954,14 @@ hr {
     justify-content: flex-start;
     align-items: center;
     /* border: solid 5px salmon; */
+}
+
+/* 整個區塊 */
+#signup .block1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: solid 1px salmon;  */
 }
 
 /* 左半區塊 */
@@ -987,7 +1000,8 @@ hr {
 
 /* 課程或活動/工作坊字體顏色+hr顏色 */
 #signup span h4,
-#signup span hr {
+#signup span hr,
+#signup h2 {
     color: #DACFB8;
     border-color: #DACFB8;
     width: 200px;
@@ -1004,7 +1018,6 @@ hr {
     border-radius: 5px;
     color: #9F9F9F;
     border-color: #D8D8D8;
-    color: #9F9F9F;
     margin-left: 60px;
 
 }
@@ -1019,5 +1032,164 @@ hr {
 /*  圈圈往右箭頭 */
 #signup .list img {
     padding-left: 10px;
-    margin-right:30px ;
+    margin-right: 30px;
+}
+
+/* 直線hr */
+#signup .vline {
+    display: flex;
+    height: 365px;
+    width: 0;
+    /* border: solid 5px salmon; */
+}
+
+/* 右邊顯示選取課程或活動 */
+#signup .nav2 {
+    /* border: solid 5px salmon;  */
+}
+
+/* 右邊小區塊 */
+#signup .list2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-left: 150px;
+    /* border: solid 5px rgb(191, 225, 242);  */
+}
+
+/* 清單內尚未添加課程/活動 */
+#signup .list2 h2 {
+    width: 250px;
+}
+
+
+/* signup suc區 報名成功區 */
+#signup .list3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#signup .list3 h2,
+#signup .list3 h3 {
+    color: #5C5C5C;
+    line-height: 20px;
+}
+
+#signup .list3 h1,
+#signup .list3 h4 {
+    color: #3C4935;
+    line-height: 20px;
+}
+
+
+/* 已添加課程內容區塊  */
+#signup .list3 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: solid 1px #797474;
+    width: 600px;
+    height: 90px;
+    margin-left: 60px;
+}
+
+/* 價格區塊*/
+#signup .box2 {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width: 100px;
+    /* border: solid 1px red; */
+    position: relative;
+    margin-right: 15px;
+}
+
+/* 茶藝興趣A班 */
+#signup .list3 h2 {
+    margin-left: 30px;
+    width: 150px;
+    /* border: solid 1px red; */
+}
+
+/* 週五下午... */
+#signup .list3 h3 {
+    margin-right: 10px;
+    width: 300px;
+    /* border: solid 1px red; */
+}
+
+/* $8000 */
+#signup .box2 div {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width: 80px;
+    margin-bottom: 30px;
+    /* border: solid 1px rgb(191, 232, 180); */
+}
+
+/* $ */
+#signup .box2 h4 {
+    /* display: flex; */
+}
+
+/* 8000 */
+#signup .box2 h1 {
+    margin-left: 10px;
+    /* border: solid 1px rgb(156, 231, 230);  */
+}
+
+/* hr */
+#signup .box2 hr {
+    width: 15px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+/* 活動:金工山林遊: 悠悠 */
+#signup .block2 {
+    position: relative;
+    margin: 10px 0 40px 60px;
+    /* border: solid 5px rgb(231, 186, 156); */
+}
+
+/* 活動 */
+#signup .act h3 {
+    background-color: #9B8256;
+    color: #fff;
+    width: 62px;
+    height: 10px;
+    border-radius: 0 5px 5px 0;
+    text-align: end;
+    line-height: 10px;
+    padding-right: 15px;
+    /* padding-left: 15px; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* border: solid 5px rgb(231, 156, 165);  */
+}
+
+/* 4/13 */
+#signup .act h1 {
+    margin-top: 20px;
+    margin-left: 30px;
+}
+
+/* 送出按鈕 */
+#signup button {
+    background-color: #3C4935;
+    border-radius: 50px;
+    margin-left: 60px;
+    /* border: solid 5px rgb(231, 156, 165);  */
+}
+
+/* 按鈕文字 */
+#signup button h3 {
+    color: #fff;
+    width: 590px;
+    height: 20px;
 }
