--- a/蘵感ZanGan上傳/pages.css
+++ b/蘵感ZanGan上傳/pages.css
@@ -270,6 +270,7 @@ h4 {
     background-color: rgba(155,130,86,.74);
     padding: 5px;
     margin: 0 20px;
+    font-family: "Noto Serif TC";
 }
 
 /* 2.news */
