--- a/蘵感ZanGan上傳/style.css
+++ b/蘵感ZanGan上傳/style.css
@@ -354,11 +354,12 @@ hr {
 }
 
 /* 登入 */
-#topbar .login{
+#topbar .login {
     display: block;
     text-decoration: none;
     border: solid 5px salmon;
 }
+
 /* 2.banner */
 #banner {
     height: 80vh;
@@ -1001,7 +1002,7 @@ hr {
 }
 
 /*  已添加的課程/活動*/
-#signup .box1{
+#signup .box1 {
     /* border: solid 5px salmon; */
 }
 
@@ -1220,10 +1221,12 @@ hr {
 }
 
 /* 上面導覽列 */
-#signup .nav,#signup .nav2{
-    margin-top:55px;
+#signup .nav,
+#signup .nav2 {
+    margin-top: 55px;
     /* border: solid 5px rgb(196, 222, 244); */
 }
+
 /* 資料核對 */
 #signup .check {
     color: #1d201d;
@@ -1246,5 +1249,125 @@ hr {
 
 /* 灰色區塊 */
 #signup .box3 {
+    width: 1000px;
     /* border: solid 5px salmon; */
+}
+
+/* cart 購物車區 */
+#signup .box4 {
+    /* border: solid 5px salmon;  */
+}
+
+/* 名稱間隔 */
+#signup .box4 h3 {
+    /* margin-right: 30px; */
+}
+
+/*Course Price Quantity Subtotal 區塊 */
+#signup .box4 div {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+/*Course Price Quantity Subtotal 單一個 */
+#signup .box4 h3 {
+    margin-right: 90px;
+    /* border: solid 5px salmon;  */
+}
+
+/* price間隔 */
+#signup .price {
+    margin-left: 400px;
+}
+
+/* cart茶藝興趣A班區塊 */
+#signup .list4 {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 1000px;
+    margin-left: 60px;
+    /* border: solid 5px salmon; */
+}
+
+/* cart hr長度  */
+#signup .item hr,
+#signup .list4 hr {
+    width: 1000px;
+}
+
+/* cart茶藝興趣A班  */
+#signup .list4 h1,
+#signup .list4 h2,
+#signup .list4 h3,
+#signup .list4 h4 {
+    color: #5C5C5C;
+}
+
+/* cart $8000區塊 */
+#signup .box5 {
+    margin-left: 70px;
+}
+
+/* 數量增減 */
+/* html, body {
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
+  } */
+.box {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    border: solid 2px #FFF;
+    background-color: #FFF;
+    color: #3C4935;
+    border-radius: 5px;
+    box-shadow: 3px 3px 5px;
+    /* rgba(0, 0, 0, 0.5); */
+    width:  90px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.minus,
+.num,
+.add,
+.count {
+    display: inline-block;
+    font-size: 16px;
+}
+
+.minus,
+.num,
+.add {
+    padding-left: 5px;
+    padding-top: 0px;
+    cursor: pointer;
+}
+
+.num {
+    width: 20px;
+    height: 30px;
+    text-align: center;
+    align-items: center;
+    padding-top: 10px;
+    margin: 0 10px 0 5px;
+}
+
+.minus,
+.add {
+    width: 10px;
+    -webkit-user-select: none;
+}
+
+.minus:hover,
+.add:hover {
+    background-color: #666;
+    color: #fff;
 }
