--- a/蘵感ZanGan上傳/style.css
+++ b/蘵感ZanGan上傳/style.css
@@ -122,6 +122,7 @@ section {
     display: block;
 }
 
+
 body {
     line-height: 1;
     font-family:
@@ -941,7 +942,8 @@ hr {
 /* 字的顏色 */
 #signup h1,
 #signup h2,
-#signup h3 {
+#signup h3,
+#signup .box5 h4 {
     color: #3C4935;
 }
 
@@ -1250,6 +1252,7 @@ hr {
 /* 灰色區塊 */
 #signup .box3 {
     width: 1000px;
+    margin-bottom: 80px;
     /* border: solid 5px salmon; */
 }
 
@@ -1258,31 +1261,32 @@ hr {
     /* border: solid 5px salmon;  */
 }
 
-/* 名稱間隔 */
+/* cart 名稱間隔 */
 #signup .box4 h3 {
     /* margin-right: 30px; */
 }
 
-/*Course Price Quantity Subtotal 區塊 */
+/*cart: Course Price Quantity Subtotal 區塊 */
 #signup .box4 div {
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
 
-/*Course Price Quantity Subtotal 單一個 */
+/*cart: Course Price Quantity Subtotal 單一個 */
 #signup .box4 h3 {
     margin-right: 90px;
     /* border: solid 5px salmon;  */
 }
 
-/* price間隔 */
+/* cart price間隔 */
 #signup .price {
     margin-left: 400px;
 }
 
 /* cart茶藝興趣A班區塊 */
-#signup .list4 {
+#signup .list4,
+#signup .list5 {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -1293,34 +1297,33 @@ hr {
 
 /* cart hr長度  */
 #signup .item hr,
-#signup .list4 hr {
+#signup .hrb {
     width: 1000px;
+    border-color: #797474;
+}
+
+/* cart 分隔線 */
+#signup .hrb {
+    margin-left: 60px;
+    margin-top: 20px;
 }
 
 /* cart茶藝興趣A班  */
-#signup .list4 h1,
 #signup .list4 h2,
-#signup .list4 h3,
-#signup .list4 h4 {
+#signup .list4 h3 {
     color: #5C5C5C;
 }
 
 /* cart $8000區塊 */
 #signup .box5 {
     margin-left: 70px;
+    /* border: solid 5px salmon; */
 }
 
-/* 數量增減 */
-/* html, body {
-    width: 100%;
-    height: 100%;
-    padding: 0px;
-    margin: 0px;
-  } */
+/* cart 數量增減 */
 .box {
     position: absolute;
-    left: 50%;
-    top: 50%;
+    left: 770px;
     transform: translateX(-50%) translateY(-50%);
     border: solid 2px #FFF;
     background-color: #FFF;
@@ -1333,6 +1336,8 @@ hr {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 100px;
+    /* border: solid 5px salmon; */
 }
 
 .minus,
@@ -1363,11 +1368,80 @@ hr {
 .minus,
 .add {
     width: 10px;
-    -webkit-user-select: none;
+    /* -webkit-user-select: none; */
 }
 
 .minus:hover,
 .add:hover {
     background-color: #666;
     color: #fff;
+}
+
+/*subtotal  */
+#signup .box6 div{
+    position: absolute;
+    right: -100px;
+    top: -35px;
+    /* border: solid 5px salmon; */
+}
+
+/*cart 活動:金工山林遊: 悠悠  */
+#signup .list5{
+
+}
+
+/*cart 卡其色活動 */
+#signup .block3{
+    top: -20px;
+}
+
+/* cart act */
+#signup .list5{
+
+}
+
+/*cart字色  */
+#signup .list5 h1,
+#signup .list5 h2,
+#signup .list5 h3,
+#signup .list5 h4{
+    color: #5C5C5C;
+}
+
+/* cart 卡其色活動 */
+#signup .act h3 {
+    color: #fff;
+    left: 0px;
+    top: 10px;
+    /* border: solid 5px salmon; */
+}
+
+/* cart活動已添加 */
+#signup .box7{
+    margin-left: 145px;
+    margin-top: 50px;
+}
+
+/*  cart活動數量 */
+#signup .box8{
+    margin-left: -60px;
+    margin-top: 60px;
+    /* border: solid 5px salmon; */
+}
+
+/* 4/13  金工山林遊: 悠悠*/
+#signup .act{
+    margin-top: 15px;
+}
+
+/* 下午14:00-16:00，共1堂 */
+#signup .list5>h3{
+    margin-top: 20px;
+    /* border: solid 5px salmon; */
+}
+
+/* cart 活動subtotal */
+#signup .box9{
+    margin-left: 170px;
+    margin-top: 50px;
 }
